--- a/CodeBreakers/app/src/main/res/layout/activity_easy.xml
+++ b/CodeBreakers/app/src/main/res/layout/activity_easy.xml
@@ -6,7 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#000"
     tools:context=".Easy">
+
+    <TextView
+        android:id="@+id/easy_remaining"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/remaining"
+        android:background="#fff"
+        android:layout_marginTop="30dp"
+        android:layout_gravity="center"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -80,6 +90,7 @@
 
     <ListView
         android:id="@+id/easy_list_view"
+        android:background="#fff"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
