--- a/CodeBreakers/app/src/main/res/layout/activity_hard.xml
+++ b/CodeBreakers/app/src/main/res/layout/activity_hard.xml
@@ -5,12 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000"
     android:orientation="vertical"
-    tools:context=".Medium">
+    android:background="#000"
+    tools:context=".Hard">
 
     <TextView
-        android:id="@+id/medium_remaining"
+        android:id="@+id/hard_remaining"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/remaining"
@@ -24,7 +24,7 @@
         android:orientation="horizontal">
 
         <com.webianks.library.scroll_choice.ScrollChoice
-            android:id="@+id/medium_digit_1"
+            android:id="@+id/hard_digit_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -38,7 +38,7 @@
             app:scroll_selected_item_text_color="#000"/>
 
         <com.webianks.library.scroll_choice.ScrollChoice
-            android:id="@+id/medium_digit_2"
+            android:id="@+id/hard_digit_2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -52,7 +52,7 @@
             app:scroll_selected_item_text_color="#000"/>
 
         <com.webianks.library.scroll_choice.ScrollChoice
-            android:id="@+id/medium_digit_3"
+            android:id="@+id/hard_digit_3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -66,7 +66,7 @@
             app:scroll_selected_item_text_color="#000"/>
 
         <com.webianks.library.scroll_choice.ScrollChoice
-            android:id="@+id/medium_digit_4"
+            android:id="@+id/hard_digit_4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -80,7 +80,21 @@
             app:scroll_selected_item_text_color="#000"/>
 
         <com.webianks.library.scroll_choice.ScrollChoice
-            android:id="@+id/medium_digit_5"
+            android:id="@+id/hard_digit_5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:scroll_background_color="#000"
+            app:scroll_selected_item_background="#fff"
+            app:scroll_item_text_color="#000"
+            app:scroll_atmospheric="true"
+            app:scroll_indicator="true"
+            app:scroll_indicator_color="#fff"
+            app:scroll_item_align="center"
+            app:scroll_selected_item_text_color="#000"/>
+
+        <com.webianks.library.scroll_choice.ScrollChoice
+            android:id="@+id/hard_digit_6"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -103,7 +117,7 @@
         android:layout_height="wrap_content"/>
 
     <ListView
-        android:id="@+id/medium_list_view"
+        android:id="@+id/hard_list_view"
         android:background="#fff"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
