Added vs Friend for hard difficulty

--- a/CodeBreakers/app/src/main/res/layout/activity_hard_friend.xml
+++ b/CodeBreakers/app/src/main/res/layout/activity_hard_friend.xml
@@ -107,4 +107,10 @@
         android:layout_height="wrap_content"
         android:text="@string/make"/>
 
+    <TextView
+        android:id="@+id/hard_friend_test"
+        android:background="#fff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
