Modded main.xml and finished players.xml

--- a/CuratorsScorepad/app/src/main/res/layout/activity_players.xml
+++ b/CuratorsScorepad/app/src/main/res/layout/activity_players.xml
@@ -1,9 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/cover"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".Players">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:layout_marginTop="-100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:inputType="text"
+        android:hint="@string/player1"
+        android:id="@+id/et_player1"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:inputType="text"
+        android:hint="@string/player2"
+        android:id="@+id/et_player2"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:inputType="text"
+        android:hint="@string/player3"
+        android:id="@+id/et_player3"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:inputType="text"
+        android:hint="@string/player4"
+        android:id="@+id/et_player4"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/submit"
+        android:id="@+id/btn_players_submit"/>
+
+
+</LinearLayout>
