--- a/CuratorsScorepad/app/src/main/res/layout/activity_main.xml
+++ b/CuratorsScorepad/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     tools:context=".MainActivity">
 
     <Button
+        android:layout_marginTop="-100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/score_game"
