--- a/PopUpWindow/app/src/main/res/layout/activity_pop_window.xml
+++ b/PopUpWindow/app/src/main/res/layout/activity_pop_window.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:background="@color/teal_200"
+    tools:context=".popWindow">
 
-    <Button
-        android:id="@+id/btn_popUP"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="POP UP"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="POP WINDOW"/>
 
 </LinearLayout>
